Create custom JRE manually and upgrade to Gradle 9 (#382)