@@ -1,8 +1,8 @@
-import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
-    alias(libs.plugins.runtime)
     alias(libs.plugins.shadow)
+    id 'application'
     id 'java'
     id 'jacoco'
 }
@@ -53,12 +53,53 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
-test {
-    dependsOn jre
-    inputs.dir tasks.jre.jreDir
+def jreOutputDir = layout.buildDirectory.dir('jre')
+tasks.register('jre') {
+    inputs.property('options', ['--strip-debug', '--no-header-files', '--no-man-pages'])
+    inputs.property('modules', ['java.desktop', 'java.instrument', 'java.naming', 'java.sql', 'jdk.crypto.ec', 'jdk.unsupported'])
 
-    def file = DefaultNativePlatform.currentOperatingSystem.isWindows() ? 'java.exe' : 'java'
-    executable = tasks.jre.jreDir.file('bin/' + file)
+    outputs.dir(jreOutputDir)
+
+    doFirst {
+        delete(jreOutputDir)
+    }
+
+    def javaLauncher = javaToolchains.launcherFor(java.toolchain)
+
+    doLast {
+        def installationPath = javaLauncher.get().metadata.installationPath
+
+        def jlink = installationPath.file(Os.isFamily(Os.FAMILY_WINDOWS) ? 'bin\\jlink.exe' : 'bin/jlink')
+        def jmods = installationPath.dir('jmods')
+
+        def output = providers.exec {
+            ignoreExitValue = true
+            commandLine = [
+                    jlink.toString(), '-v',
+                    *(inputs.properties['options'] as List),
+                    '--module-path', jmods.toString(),
+                    '--add-modules', (inputs.properties['modules'] as List).join(','),
+                    '--output', jreOutputDir.get().toString()
+            ]
+        }
+
+        def result = output.result.get()
+        if (result.exitValue == 0) {
+            logger.info(output.standardOutput.asText.get())
+        } else {
+            logger.log(LogLevel.ERROR, output.standardError.asText.get())
+        }
+
+        result.assertNormalExitValue()
+        result.rethrowFailure()
+    }
+}
+
+test {
+    dependsOn tasks.named('jre')
+    inputs.dir(jreOutputDir)
+
+    executable = jreOutputDir.get().file(Os.isFamily(Os.FAMILY_WINDOWS) ? 'bin\\java.exe' : 'bin/java')
 
     useJUnitPlatform()
     finalizedBy jacocoTestReport
@@ -93,10 +134,3 @@ shadowJar {
         exclude('dist_webp_binaries/')
     }
 }
-
-runtime {
-    options = ['--strip-debug', '--no-header-files', '--no-man-pages'] // don't compress jre because final docker image will be larger
-    modules = ['java.desktop', 'java.instrument', 'java.naming', 'java.sql', 'jdk.crypto.ec', 'jdk.unsupported']
-}
-
-suggestModules.dependsOn shadowJar
